# api/src/main/java/com/example/demo/calculations/engine/interest/InterestStrategyFactory.java
@@ -1,6 +1,7 @@
 package com.example.demo.calculations.engine.interest;
 
-import com.example.demo.common.RateType;
+
+import com.example.demo.model.RateType;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
