# api/src/main/java/com/example/demo/common/ProductType.java
@@ -1,6 +1,0 @@
-package com.example.demo.common;
-
-public enum ProductType {
-    LOAN,
-    INVESTMENT
-}
